# shuttle-template-react

./: .gitignore  package-lock.json  package.json  vite.config.ts
server/: .ignore  Cargo.toml  Shuttle.toml
server/src/: main.rs
src/: App.tsx
